# Triangles-3D

./: .gitignore  CMakeLists.txt  README.md
include/: admin.hpp  components.hpp  intersector.hpp  line.hpp  oct_tree.hpp  plane.hpp  point.hpp  triangle.hpp  utils.hpp  vector.hpp
src/: admin.cpp  diff_intersections.cpp  interface_intersections.cpp  line.cpp  main.cpp  plane.cpp  point.cpp  triangle.cpp  vector.cpp
src/OctTree/: oct_tree.cpp
src/intersections/: diff_intersections.cpp  interface_intersections.cpp  same_intersections.cpp
tests/: CMakeLists.txt
tests/end2end/: generator.py  test_runner.sh
tests/end2end/include/: end2end_generator.hpp
tests/end2end/resources/answers/: answ_1.txt  answ_2.txt  answ_5.txt  answ_7.txt  answ_8.txt
tests/end2end/resources/tests/: test.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/end2end/src/: end2end_generator.cpp  main.cpp
tests/src/: main.cpp
tests/unit/: diff_intersections.cpp  line.cpp  linear_eq_solver.cpp  main.cpp  plane.cpp  point.cpp  vector.cpp
